# nlp100

./: .gitignore  README.md  ch01.ipynb  main.py  pyproject.toml
ch01/: ch01.ipynb
ch02/: ch02.ipynb
ch02/failure_sec15unix/: popular_names_00  popular_names_01  popular_names_02  popular_names_03  popular_names_04  popular_names_05  popular_names_06  popular_names_07  popular_names_08  popular_names_09
ch02/sec15py/: popular_names_py_09.txt
ch02/sec15unix/: popular_names_unix_00.txt  popular_names_unix_01.txt  popular_names_unix_02.txt  popular_names_unix_03.txt  popular_names_unix_04.txt  popular_names_unix_05.txt  popular_names_unix_06.txt  popular_names_unix_07.txt  popular_names_unix_08.txt  popular_names_unix_09.txt
ch03/: ch03.ipynb
ch04/: ch04.ipynb
ch05/code/: 40.py  41.py  42.py  43.py  44.py  45.py  46.py  47.py  48.py  49.py
ch06/output/: 52.txt  53.txt  54.txt  55.txt  56.txt
ch06/src/: 50.py  51.py  52.py  53.py  54.py  55.py  56.py  57.py  58.py  59.py
ch07/code/: 60.py  61.py  62.py  63.py  64.py  65.py
ch07/output/: 60.txt  61.txt  62.txt  63.txt  64.txt  65.txt
ch08/: ch08.ipynb
ch08/code/: 70.py  71.py
ch08/output/: 70.txt  71.txt
ch09/code/: 80.py  81.py  82.py  83.py  84.py  85.py  86.py  87.py  88.py  89.py
ch09/output/: 80.txt  81.txt  82.txt  83.txt  84.txt  85.txt  86.txt  87.txt  88.txt  89.txt
ch10/code/: 90.py  91.py  92.py  93.py  94.py  95.py  96.py  97.py  98.py  99.py
ch10/output/: 90.txt  91.txt  92.txt  93.txt  94.txt  95.txt  96.txt  97.txt  98.txt  99.txt
